force-app/main/default/objects/OwnerTenantIntermediate__c/OwnerTenantIntermediate__c.object-meta.xml
<CustomObject>
    <label>OwnerTenantIntermediate</label>
    <nameField>
        <label>OwnerTenantIntermediate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OwnerTenantIntermediates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>