force-app/main/default/objects/OwnerTenantIntermediate__c/fields/Alternate_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Mobile_Number__c</fullName>
    <label>Alternate Mobile Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>