force-app/main/default/objects/OwnerTenantIntermediate__c/fields/DTCM_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DTCM_Start_Date__c</fullName>
    <label>DTCM Start Date</label>
    <type>Date</type>
</CustomField>