force-app/main/default/objects/OwnerTenantIntermediate__c/fields/Ejari_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Ejari_Start_Date__c</fullName>
    <label>Ejari Start Date</label>
    <type>Date</type>
</CustomField>