force-app/main/default/objects/OwnerTenantIntermediate__c/fields/Type_Of_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Tenant__c</fullName>
    <label>Type Of Tenant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>HHC</fullName>
            </value>
            <value>
                <fullName>HHO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>