force-app/main/default/objects/OwnerTenantIntermediate__c/recordTypes/Move_In.recordType-meta.xml
<RecordType>
    <fullName>Move_In</fullName>
    <active>true</active>
    <label>Move In</label>
</RecordType>